<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="zolo_name">DM-CHAT</string>
    <string name="yuelan_name">yuelan</string>
    <string name="app_name">zolo</string>
    <string name="app_init">IM初始化</string>
    <string name="app_IM">IM</string>
    <string name="app_doc">IM开发文档</string>
    <string name="app_sn">聊天</string>

    <string name="page_main">主页</string>
    <string name="page_app">会话</string>
    <string name="page_found" translatable="false">发现</string>
    <string name="page_contact">通信录</string>
    <string name="page_me">我的</string>
    <string name="search">搜索</string>

    <string name="account">账号</string>
    <string name="my_chat_account">账号:%1$s</string>
    <string name="setting">设置</string>
    <string name="abort">关于</string>

    <string name="new_message_remind">新消息提醒</string>
    <string name="exit">退出登录</string>
    <string name="logout">注销账户</string>
    <string name="search_for_friends" translatable="false">搜索</string>

    <string name="app_name_in_about">阅览即时通讯</string>
    <string name="function_introduction">功能介绍</string>
    <string name="complaint">投诉</string>
    <string name="check_update">检查更新</string>
    <string name="terms_of_use_and_privacy_policy">使用条款和隐私政策</string>
    <string name="name">阅览社区</string>
    <string name="slogan">沟通如此简单</string>
    <string name="software_update_prompt" translatable="false">软件更新提示</string>
    <string name="app_update_mark" translatable="false">基础功能优化，抢先体验</string>
    <string name="update_now" translatable="false">立即更新</string>
    <string name="not_updated" translatable="false">暂不更新</string>
    <string name="new_updated">已是最新版本</string>

    <string name="warning">警告</string>
    <string name="exit_confirm" translatable="false">是否确定退出</string>

    <string name="kickoff">您需要重新登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="upgrade">升级</string>
    <string name="find_new_version">发现新版本: </string>
    <string name="background_info">允许IM后台运行，更能保证消息的实时性</string>
    <string name="modify_user_nickname">修改个人昵称？</string>
    <string name="modify">修改</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_failure">修改失败</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="account_security">账户与安全</string>
    <string name="language_settings">设置语言</string>
    <string name="space_setting">空间设置</string>
    <string name="help_network">CROSSGO</string>

    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="accomplish">完成</string>
    <string name="please_enter_old_password">请输入旧密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="please_enter_code">请输入验证码</string>
    <string name="get_code">验证码</string>
    <string name="new_get_code">重新获取</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="code_not_empty">验证码不能为空</string>
    <string name="password_is_different">密码不相同</string>

    <string name="error_network">网络错误…</string>
    <string name="error_need_permission">需要相关权限才能运行</string>
    <string name="error_privilege_grant">权限获取失败</string>
    <string name="error_login_failed">登录失败</string>
    <string name="create_group">发起群聊</string>
    <string name="add_friend">加好友/群</string>
    <string name="scan">扫一扫</string>
    <string name="choose_service">选择服务商</string>

    <string name="assets">资产</string>
    <string name="wallet" translatable="false">钱包</string>
    <string name="team_circle">团队圈</string>
    <string name="message_and_notice">消息与通知</string>
    <string name="notice">通知</string>
    <string name="announcement">公告</string>
    <string name="all_read">全部已读</string>
    <string name="feedback">用户反馈</string>
    <string name="lifeService" translatable="false">生活服务</string>
    <string name="privacyPolicy" translatable="false">隐私政策</string>
    <string name="useragreement" translatable="false">用户协议</string>
    <string name="promotion" translatable="false">推广</string>
    <string name="account_and_security">账号与安全</string>
    <string name="fav">收藏</string>
    <string name="theme">主题</string>
    <string name="network_help">CROSSGO</string>
    <string name="set_nft">设置nft</string>
    <string name="english">英语</string>
    <string name="chinese">中文</string>
    <string name="vietnam">越南语</string>
    <string name="select_language">选择语言</string>
    <string name="restart_app">重启app</string>
    <string name="restart_app2" translatable="false">语言变更,需要重启</string>
    <string name="privacy_content" translatable="false">
        J-Talking严格遵守法律法规，遵循以下隐私保护原则，为您提供更加安全、可靠的服务：\n\n
一、安全可靠：\n
我们竭尽全力通过合理有效的信息安全技术及管理流程，防止您的信息泄露、损毁、丢失。\n
二、自主选择：\n
我们为您提供便利的信息管理选项，以便您做出合适的选择，管理您的个人信息。\n
三、保护通信秘密：\n
我们严格遵照法律法规，保护您的通信秘密，为您提供安全的通信服务。\n
四、合理必要：\n
为了向您和其他用户提供更好的服务，我们仅收集必要的信息。\n
五、公开透明：\n
我们努力使用简明易懂的表述，向您介绍隐私政策，以便您清晰地了解我们的信息处理方式。\n
六、将隐私保护融入产品设计：\n
我们在产品和服务研发、运营的各个环节，融入隐私保护的理念。\n\n

《隐私政策》主要向您说明：\n
我们收集哪些信息\n
我们收集信息的用途\n
您所享有的权利\n\n

您可以通过阅读《J-Talking隐私政策》（以下简称“本隐私政策”），详细了解我们对个人信息的收集、使用方式，以便您更好地了解我们的服务并作出适当的选择。\n
如果我们具体的产品和服务有具体的隐私保护指引，您可以查阅该特定隐私保护指引，以帮助您更好地保护您的个人信息。\n
我们收集的信息\n
我们根据法律法规的要求，遵循合法、正当、必要和诚信的原则，仅收集实现产品功能所必要的个人信息。这些信息包括：\n
一、您在使用我们服务时主动提供的信息：\n\n

1、您在注册或使用我们的产品或服务时，主动填写或上传的昵称、手机号码、头像、图片等。\n
2、您通过我们的客服或参加我们举办的活动时所提交的信息。\n
3、我们一些特定的服务可能需要您提供特定的个人信息来实现相关功能。若您选择不提供该类信息，将不会影响您使用产品或服务中的其他功能。\n\n


二、我们在您使用服务时获取的信息：\n
1、日志信息\n
例如，当您使用我们的服务时，为了维护产品与服务的安全稳定运行，我们可能会收集设备信息、软件信息、服务日志信息等相关信息。\n
2、位置信息\n
例如，当您使用与位置有关的服务时，我们可能会记录您设备所在的位置信息，以便为您提供相关服务。\n
您或其他用户在使用服务时提供的信息中可能包含您所在地理位置信息，例如您或其他人共享的照片包含的地理标记信息。\n
GPS位置信息是敏感个人信息，若您拒绝提供该信息，不会影响您使用产品或服务的其他功能，仅会影响与地理位置相关的功能。\n\n

3、其他相关信息\n
为了帮助您更好地使用我们的产品或服务，经您的明确授权我们可能会收集相关信息，例如，您选择开启导入通讯录功能，我们可能对您联系人的姓名和电话号码进行加密，并仅收集加密后的信息。\n\n

其他用户分享的信息中含有您的信息\n
例如，其他用户发布的照片或分享的视频中可能包含您的信息。\n
其他情况获取的信息\n
在法律允许的情况下，经过您的同意，我们可能会获得您在使用第三方合作伙伴服务时所产生或分享的信息。例如，您使用微信或QQ账户登录第三方合作伙伴服务时，我们会获得您登录第三方合作伙伴服务的名称等信息，以方便您进行授权管理。您可以阅读第三方合作伙伴服务的用户协议和隐私政策了解相关内容。\n
我们如何使用信息\n
我们严格遵守法律法规的规定及与用户的约定，将收集的信息用于以下用途。若我们超出以下用途使用您的信息，我们将再次向您进行说明，并征得您的同意。\n
一、向您提供服务\n
满足您的个性化需求\n
例如，语言设定、位置设定、个性化的帮助服务。\n
二、安全保障\n
例如，我们会将您的信息用于身份验证、安全防范、反诈骗监测、存档备份、客户的安全服务等用途。例如，您下载或安装的安全软件会对恶意程序或病毒进行检测，或为您识别诈骗信息。\n
三、向您推荐您可能感兴趣的广告、资讯等\n
评估、改善我们的广告投放和其他促销及推广活动的效果\n
四、管理软件\n
例如，进行软件认证、软件升级等。\n
五、邀请您参与有关我们服务的调查\n
为了让您有更好的体验、改善我们的服务或经您同意的其他用途，在符合相关法律法规的前提下，我们可能将通过某些服务所收集的信息用于我们的其他服务。例如，将您在使用我们某项服务时的信息，用于个性化的服务体验、用户研究分析与统计等服务。\n
为了确保服务的安全，帮助我们更好地了解我们应用程序的运行情况，我们可能记录相关信息，例如，您使用应用程序的频率、故障信息、总体使用情况、性能数据以及应用程序的来源。我们不会将我们存储在分析软件中的信息与您在应用程序中提供的个人身份信息相结合。\n
随着业务的发展，我们提供的产品功能和服务可能会有所调整和变化，若处理目的因此发生变更，我们将再次向您进行说明，并征得您的同意。\n
我们如何使用Cookie、标识符及相关技术\n
Cookie、标识符及相关技术是互联网行业普遍使用的技术。按照法律法规的相关规定，我们或我们的第三方合作伙伴，可能通过放置安全的Cookie、标识符及相关技术收集您的信息，以便为您提供更好的用户体验和服务。我们会严格要求第三方合作伙伴遵守本隐私政策的相关规定。\n
您分享的信息\n
您可以通过我们的服务与您的好友、家人及其他用户分享您的相关信息。\n
请注意，这其中可能包含您的个人身份信息、个人财产信息等敏感信息。请您谨慎考虑披露您的相关个人敏感信息。\n
您可通过我们服务中的隐私设置来控制您分享信息的范围，也可通过服务中的设置或我们提供的指引删除您公开分享的信息。但请您注意，这些信息仍可能由其他用户或不受我们控制的非关联第三方独立地保存。\n
您如何管理自己的信息\n
您在使用我们服务的过程中， 可以通过查阅、复制、更正、补充、删除等方式来管理您的信息。当您使用我们的具体产品和服务时，您可以查阅其独立的隐私保护指引，我们在这些指引中具体描述了您管理自己的个人信息的途径和方式，以帮助您更好的保护您的个人信息。\n
例如，若您在使用地理位置相关服务时，希望停止分享您的地理位置信息，您可通过手机定位关闭功能、软硬件服务商及通讯服务提供商的关闭方式停止分享，建议您仔细阅读相关指引。\n
在您行使上述权利时，我们可能会要求您进行身份验证，以保障帐号的安全。如果您有任何问题，请通过本隐私政策列明的联系方式\n 与我们联系 。\n
请您理解，由于技术所限、法律或监管要求，我们可能无法满足您的所有要求，我们会在法律法规规定的期限内进行反馈。同时我们将不断优化产品和服务来保障您的权利。\n
第三方数据处理及信息的公开披露\n
我们与第三方合作过程中，将遵守法律规定，按照最小必要原则，安全审慎地处理相关数据。\n
我们将按照法律法规的规定，对数据处理涉及的第三方进行严格的限制。要求其严格遵守我们关于数据隐私保护的措施与要求，包括但不限于根据数据保护协议、承诺书及相关数据处理政策进行处理，保障数据安全。\n
出于为您提供服务的目的，我们可能委托第三方服务商处理您的个人信息，该等服务商将严格按照我们委托的目的和相关委托处理协议处理个人信息。\n
我们将严格保护您的个人信息，不会主动公开披露您的个人信息，亦不会主动向合作伙伴分享可用于识别您个人身份的信息，除非经您单独同意或法律法规另有规定，例如：\n
1、为订立、履行个人作为一方当事人的合同所必需，或者按照法律制定的劳动规章制度和依法签订的集体合同实施人力资源管理所必需；\n
2、为履行法定职责或者法定义务所必需；\n
3、为应对突发公共卫生事件，或者紧急情况下为保护自然人的生命健康和财产安全所必需；\n
4、为公共利益实施新闻报道、舆论监督等行为，在合理的范围内处理个人信息；\n
5、依照法律规定在合理的范围内处理个人自行公开或者其他已经合法公开的个人信息；\n
6、法律、行政法规规定的其他情形。\n\n

随着我们业务的持续发展，当发生合并、收购、资产转让等交易导致向第三方转移您的个人信息时，我们将通过推送通知、公告等形式告知您相关情形，按照法律法规及不低于本隐私政策所要求的标准继续保护或要求新的管理者继续保护您的个人信息。\n
我们可能向您发送的信息\n
一、信息通知\n
您在使用我们的服务时，我们可能向您发送电子邮件、短信、资讯或推送通知。\n
您可以按照我们的相关提示，在设备上选择取消订阅。如特定的产品和服务存在个性化推送的信息，请您查阅该产品和服务具体的隐私保护指引获取更能多的信息、或关闭个性化推荐。\n\n

二、与服务有关的公告\n
我们可能在必要时（例如，因系统维护而暂停某一项服务时）向您发出与服务有关的公告。\n
您可能无法取消这些与服务有关、性质不属于广告的公告。\n\n

存储信息的地点和期限\n
一、存储信息的地点\n
我们遵守法律法规的规定，将在中华人民共和国境内收集和产生的个人信息存储在境内。\n\n

二、存储信息的期限\n
一般而言，我们仅在为实现目的所必需的最短时间内保留您的个人信息，但下列情况除外：\n
1、为遵守适用的法律法规等有关规定；\n
2、为遵守法院判决、裁定或其他法律程序的规定；\n
3、为遵守相关政府机关执法的要求；\n\n

当我们的产品或服务发生停止运营的情形时，我们将采取例如，推送通知、公告等形式通知您，并在合理的期限内删除或匿名化处理您的个人信息。\n

信息安全\n
一、我们为您的信息提供相应的安全保障，以防止信息的丢失、不当使用、未经授权访问或披露。\n
二、我们严格遵守法律法规保护用户的通信秘密。\n
三、我们将在合理的安全水平内使用各种安全保护措施以保障信息的安全。\n
例如，我们使用加密技术、匿名化处理等手段来保护您的个人信息。\n
四、我们建立专门的管理制度、流程和组织确保信息安全。\n
例如，我们严格限制访问信息的人员范围，要求他们遵守保密义务，并进行审查。\n
五、若发生个人信息泄露等安全事件，我们会启动应急预案，阻止安全事件扩大，并以推送通知、公告等形式告知您。\n
六、
广告
为了提供更丰富的广告体验，我们可能向您提供个性化广告服务，您在J-Talking及合作第三方的网站、应用及其他渠道中可以接收到相关广告内容。您可以查阅具体产品的隐私保护指引了解更多。如您不希望接收个性化广告，也可以根据具体产品中的指引进行关闭。\n\n

联系我们\n
我们设立了专门的个人信息保护团队和个人信息保护负责人，如果您对本隐私政策或个人信息保护相关事宜有任何疑问或投诉、建议时，您可以通过以下方式与我们联系：\n
1. 您可以填写 个人信息保护和隐私问题反馈问卷 与我们联系；\n
2. 将问题发送至correos332@outlook.com；\n\n

我们将尽快审核所涉问题，并在15个工作日或法律法规规定的期限内予以反馈。\n\n

变更\n
我们可能适时修订本隐私政策内容。\n
如该等变更会导致您在本隐私政策项下权利的实质减损，我们将在变更生效前，通过在页面显著位置提示。特定产品和服务的隐私保护指引有关个人信息的处理目的、处理方式和处理的个人信息种类发生变更的，会重新取得您的同意。\n\n

    </string>
    <string name="default_notification_channel_id">channel_id</string>
</resources>
