<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/conversation_list"
        android:icon="@drawable/bottom_conversation_menu_selector"
        android:title="@string/page_app"
        app:showAsAction="never" />
<!--        android:title="@string/page_app"-->
    <item
        android:id="@+id/contact"
        android:title="@string/page_contact"
        android:icon="@drawable/bottom_contact_menu_selector"/>
<!--        android:title="@string/page_contact" />-->
    <item
        android:id="@+id/me"
        android:title="@string/page_me"
        android:icon="@drawable/bottom_me_menu_selector"/>
<!--        android:title="@string/page_me" />-->

</menu>